fixed alignment

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -167,12 +167,13 @@ body {
 /* gallery */
   .gallery {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: baseline;
     flex-direction: row;
     grid-column-gap: 18px;
-    max-width: 100%;
+    max-width: 90%;
+    margin: 20px auto 30px auto;
 
   }
   .gallery img {
